# nonebot_plugin_addFriend

./: README.md  publish.bat  pyproject.toml  setup.py  update.bat
nonebot_plugin_addFriend/: LICENSE  README.md  __init__.py  config.json  configUtil.py  num.json  num.txt  requestor.json  utils.py
nonebot_plugin_addFriend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
